# MKAC

./: Cargo.toml  LICENSE  README.md  build.bat  build.rs
src/: app.rs  autostart.rs  icon.rs  main.rs  platform.rs
src/config/: macros.rs  mod.rs  schema.rs  settings.rs
src/engine/: command.rs  keyboard.rs  macros.rs  mod.rs  mouse.rs  scheduler.rs  virtual_hold.rs
src/hooks/: hotkey.rs  ll_keyboard.rs  ll_mouse.rs  mod.rs  recording.rs
src/tray/: mod.rs
src/ui/: mod.rs  nav.rs  panel_clicker.rs  panel_keypress.rs  panel_macros.rs  panel_rate.rs  panel_settings.rs  theme.rs  widgets.rs
src/util/: keycodes.rs  mod.rs
tools/: cps_meter.ahk
