[package]
name = "mkac"
version = "1.0.0"
edition = "2021"
description = "Mouse & Keyboard Auto Clicker + key holder (Windows)"
license = "MIT"
publish = false

[dependencies]
# `default_fonts` and `persistence` are off: we install our own Inter fonts
# via theme::install_fonts, and we don't use eframe's egui::Memory persistence.
eframe = { version = "0.34", default-features = false, features = ["glow"] }
egui = "0.34"

windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Graphics_Dwm",
    "Win32_Media",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
] }

tray-icon = "0.22"
crossbeam-channel = "0.5"
spin_sleep = "1.3"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fastrand = "2"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
ico = "0.4"
winresource = "0.1"

[profile.release]
# Ship-quality by default: fat LTO + single codegen unit for maximum dead-code
# elimination, opt-level "s" trades a handful of scheduler-loop perf for a
# meaningfully smaller binary (and smaller binaries = smaller working set).
# Empirically "s" beats "z" on this codebase by ~1.3 MB — "z" blocks
# inlining aggressively enough that cold paths stay duplicated.
lto = "fat"
codegen-units = 1
opt-level = "s"
strip = "symbols"
panic = "abort"
